syntax = "proto3";

option csharp_namespace = "Persistence";
option java_multiple_files = true;

package UserService;

// The greeting service definition.
service UserService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SendMessage (SendMessageRequest) returns (SendMessageReply);
  rpc CreateChat (CreateChatRequest) returns (CreateChatReply);
  rpc FetchChatHistory (FetchChatHistoryRequest) returns (FetchChatHistoryReply);
}

// The request message containing the user's name.
message HelloRequest {
  string id = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message FetchChatHistoryRequest{
  int32 chatId = 1;
}

message FetchChatHistoryReply{
  repeated MessageObject messages = 1;
}

message CreateChatRequest {
  repeated int32 userIds = 1;
}

message CreateChatReply{
  int32 id = 1;
}


message SendMessageRequest {
  int32 authorId = 1;
  int32 chatId = 2;
  string content = 3;
}

message SendMessageReply {
  MessageObject message = 1;
}

message MessageObject {
  int32 id = 1; 
  int32 authorId = 2;
  int32 chatId = 3;
  string content = 4;
}